--- a/CalculatorApp/app/src/main/res/layout/activity_calculator_constraint.xml
+++ b/CalculatorApp/app/src/main/res/layout/activity_calculator_constraint.xml
@@ -15,20 +15,77 @@
         android:layout_marginTop="10dp"
         android:text="Kalkulator"
         android:textSize="28sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/main"
+        app:layout_constraintEnd_toEndOf="@id/main"
+        app:layout_constraintStart_toStartOf="@id/main"/>
 
     <EditText
+        android:id="@+id/edAngkaC1"
+        app:layout_constraintTop_toBottomOf="@id/textView"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
         android:hint="Input Angka Pertama"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="@id/textView"
+        app:layout_constraintStart_toStartOf="@id/textView"
+        android:layout_marginBottom="30dp"/>
+
+    <EditText
+        android:id="@+id/edAngkaC2"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="48dp"
+        android:hint="Input Angka Kedua"
+        android:inputType="number"
+        app:layout_constraintTop_toTopOf="@id/edAngkaC1"
+        app:layout_constraintStart_toStartOf="@id/edAngkaC1" />
+
+    <Button
+        android:id="@+id/btnPlus"
+        android:layout_width="90dp"
+        android:layout_height="80dp"
+        android:text="+"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/edAngkaC2"
+        app:layout_constraintStart_toStartOf="@id/main"
+        android:layout_marginStart="20dp"/>
+
+    <Button
+        android:id="@+id/btnMin"
+        android:layout_width="90dp"
+        android:layout_height="80dp"
+        android:text="-"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/edAngkaC2"
+        app:layout_constraintStart_toEndOf="@id/btnPlus"/>
+
+    <Button
+        android:id="@+id/btnMult"
+        android:layout_width="90dp"
+        android:layout_height="80dp"
+        android:text="X"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/edAngkaC2"
+        app:layout_constraintStart_toEndOf="@id/btnMin"/>
+
+    <Button
+        android:id="@+id/btnDiv"
+        android:layout_width="90dp"
+        android:layout_height="80dp"
+        android:text="/"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/edAngkaC2"
+        app:layout_constraintStart_toEndOf="@id/btnMult"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hasil"
+        android:textSize="30sp"
+        app:layout_constraintTop_toBottomOf="@id/btnPlus"
+        app:layout_constraintStart_toStartOf="@id/btnPlus"
+        android:layout_marginStart="150dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
